[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ah_excel"
version = "1.0.0"
description = "A plugin for Excel file operations and analysis"
requires-python = ">=3.7"
dependencies = ["openpyxl"]

[project.optional-dependencies]
dev = ["pytest"]
